# kokoro-runpod-tts

./: Dockerfile  digest.txt  download_model.py  handler.py  pyproject.toml  requirements.txt  test_client.py  test_imports.py
.github/workflows/: docker-build.yml
