[project]
name = "kokoro-tts-runpod"
version = "0.1.0"
description = "Kokoro TTS for Runpod Serverless"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "phonemizer>=3.2.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0+cu118",
    "torchaudio>=2.0.0+cu118",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"